# flipper-mcp

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
c2-agent/: Dockerfile  README.md  c2_agent.py  demo_scenario.py  requirements.txt
config/: modules.example.toml
docs/: API.md  ARCHITECTURE.md  DESIGN.md  HARDWARE.md  MAC_SPOOFING.md  MODULE_DEVELOPMENT.md  OPERATIONS.md  POC_DYNAMIC_TOOLING.md  POC_GUIDE.md  RELAY.md  RELEASE.md  SETUP.md  TROUBLESHOOTING.md
firmware/: Cargo.toml  build.rs  espflash.toml  idf_component.yml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: log_buffer.rs  main.rs
firmware/src/config/: mod.rs  nvs.rs  settings.rs
firmware/src/mcp/: jsonrpc.rs  mod.rs  server.rs  tools.rs  types.rs
firmware/src/mcp/transport/: manager.rs  mod.rs  sse.rs  streamable.rs
firmware/src/modules/: c_tool.rs  config.rs  discovery.rs  mod.rs  registry.rs  traits.rs
firmware/src/modules/builtin/: ble.rs  building_mgmt.rs  c2.rs  gpio.rs  ibutton.rs  infrared.rs  mod.rs  nfc.rs  rfid.rs  storage.rs  subghz.rs  system.rs
firmware/src/tunnel/: client.rs  mdns.rs  mod.rs
firmware/src/uart/: cli.rs  fap.rs  mod.rs  protocol.rs  transport.rs
firmware/src/wifi/: ap.rs  manager.rs  mod.rs  station.rs
flipper-app/: README.md  application.fam  flipper_mcp.c
flipper-c2-client/: application.fam  c2_client.c
infra/aws/: compute.tf  dns.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
infra/bootstrap/: aws.sh  gcp.sh
relay/: Cargo.toml
relay/src/: main.rs  proxy.rs  tunnel.rs
scripts/: build-relay.sh  build.sh  flash.sh  monitor.sh  release.sh  setup-toolchain.sh  test-connection.sh  wifi-config.sh
shared/: c2_protocol.h
(+20 files in other folders)
