[package]
name = "flipper-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "flipper-mcp"
harness = false

[dependencies]
esp-idf-svc = { version = "0.49", features = ["binstart"] }
esp-idf-hal = "0.44"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[build-dependencies]
embuild = "0.32"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
