[package]
name = "flipper-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "flipper-mcp"
harness = false

[dependencies]
esp-idf-svc = { version = "0.51", features = ["binstart"] }
esp-idf-hal = "0.45"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }
